fixed contact page on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -79,6 +79,10 @@
       font-size: 5rem;
     }
 
+    .boxes div {
+      font-size: 1.5rem;
+    }
+
     .projects {
       grid-template-columns: 1fr;
     }
